--- a/test/5_ver_1.0/par/square_mpt_test.qsf
+++ b/test/5_ver_1.0/par/square_mpt_test.qsf
@@ -122,4 +122,5 @@ set_global_assignment -name QIP_FILE ../rtl/FP/FP32_mult.qip
 set_global_assignment -name QIP_FILE ../rtl/FP/FP32_add.qip
 set_global_assignment -name QIP_FILE ../rtl/RAM/RAM_32b_256.qip
 set_global_assignment -name QIP_FILE ../rtl/PLL/pll.qip
+set_global_assignment -name QIP_FILE ../rtl/RAM/RAM_32b_result.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
